Fixes alignment on phone number widget

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -229,6 +229,7 @@ hr.line {
 	}
 	.right {
 		text-align: right;
+		float: right;
 	}
 	.widget.logo {
 		text-align: center;
